AVFMediaPlayer: check that player is valid in updateAudioOutputDevice()

Check that the player is valid before accessing it in
updateAudioOutputDevice() and return earlier otherwise. It looks like
this check was simply missed before, because we already handle such
cases in other places, such as setMuted, setVolume, etc.

Task-number: QTBUG-129692
Change-Id: I5b73c99e37802c6e284c0c094a782864df4765f7
Reviewed-by: Jøger Hansegård <joger.hansegard@qt.io>
(cherry picked from commit 2c316575c0b6e789138575b01b9506e7428ea1e4)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>